<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="Display Settings" >

        <Preference android:key="selected_theme"
            android:summary="@string/select_theme_summary"
            android:title="@string/select_theme_title" />
        <com.mkr.file_explorer.CustomListPreference
            android:defaultValue="0"
            android:entries="@array/text_size_settings_entries"
            android:entryValues="@array/text_size_settings_values"
            android:key="text_size"
            android:summary="Select text size "
            android:title="Text Size" >
        </com.mkr.file_explorer.CustomListPreference>
        <com.mkr.file_explorer.CustomListPreference
            android:defaultValue="0"
            android:entries="@array/sort_settings_entries"
            android:entryValues="@array/sort_settings_values"
            android:key="sort_items"
            android:summary="Select how the items should be sorted by"
            android:title="Sort By" >
        </com.mkr.file_explorer.CustomListPreference>
       <com.mkr.file_explorer.CustomListPreference
            android:entries="@array/view_type_settings_entries"
            android:entryValues="@array/view_type_settings_values"
            android:key="view_type"
            android:defaultValue="0"
            android:summary="Select view type"
            android:title="View Type" > 
        </com.mkr.file_explorer.CustomListPreference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Advanced Settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="display_hidden"
            android:summary="@string/hide_summary"
            android:title="@string/pref_show_hidden" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="display_modified_date"
            android:summary="@string/date_modified_summary"
            android:title="@string/pref_show_modified_date" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="display_thumbs"
            android:summary="@string/thumbs_summary"
            android:title="@string/pref_thumbnails" >
        </CheckBoxPreference>
        <Preference android:key="reset_home"
            android:summary="@string/remove_home_summary"
            android:title="@string/remove_home_title" />
        <!--
        <PreferenceScreen
            android:title="Display settings" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="display_hidden"
                android:summary="@string/hide_summary"
                android:title="Show hidden files" >
            </CheckBoxPreference>
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="display_modified_date"
                android:summary="@string/date_modified_summary"
                android:title="Show Modified Date" >
            </CheckBoxPreference>
        </PreferenceScreen>
        
        <Preference
            android:summary="Change directory paths like home directory etc... "
            android:title="Path settings"
            android:key="home_path" >
        </Preference> -->
    </PreferenceCategory>
    
    <PreferenceCategory android:title="About" >
        <Preference android:title="About"
             android:key="about_msg" />
        <Preference android:title="Help"
             android:key="help_me" /> 
    </PreferenceCategory>

</PreferenceScreen>