<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/explorer_toolbar_multi_cancel"
            android:layout_width="@dimen/toolbar_item_width"
            android:layout_height="match_parent"
            android:background="@drawable/tool_bar_bg"
            android:drawableTop="@drawable/multi_cancel"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/toolbar_item_padding_top"
            android:text="@string/cancel"
            android:textColor="@color/tool_bar_item_text_color"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/explorer_toolbar_multi_copy"
            android:layout_width="@dimen/toolbar_item_width"
            android:layout_height="match_parent"
            android:background="@drawable/tool_bar_bg"
            android:drawableTop="@drawable/copy"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/toolbar_item_padding_top"
            android:text="@string/copy"
            android:textColor="@color/tool_bar_item_text_color"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/explorer_toolbar_multi_cut"
            android:layout_width="@dimen/toolbar_item_width"
            android:layout_height="match_parent"
            android:background="@drawable/tool_bar_bg"
            android:drawableTop="@drawable/cut"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/toolbar_item_padding_top"
            android:text="@string/cut"
            android:textColor="@color/tool_bar_item_text_color"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/explorer_toolbar_multi_delete"
            android:layout_width="@dimen/toolbar_item_width"
            android:layout_height="match_parent"
            android:background="@drawable/tool_bar_bg"
            android:drawableTop="@drawable/multiple_delete"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/toolbar_item_padding_top"
            android:text="@string/delete"
            android:textColor="@color/tool_bar_item_text_color"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/explorer_toolbar_multi_selectall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/tool_bar_bg"
            android:drawableTop="@drawable/multi"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/toolbar_item_padding_top"
            android:text="@string/selectall"
            android:textColor="@color/tool_bar_item_text_color"
            android:textStyle="normal" />

        <!-- <TextView
            android:id="@+id/explorer_toolbar_multi_unselectall"
            android:layout_width="@dimen/toolbar_item_width"
            android:layout_height="match_parent"
            android:background="@drawable/tool_bar_bg"
            android:drawableTop="@drawable/multi_unselectall"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/toolbar_item_padding_top"
            android:text="@string/unselectall"
            android:textColor="@color/tool_bar_item_text_color"
            android:textStyle="normal"
            android:visibility="gone" /> -->
    </LinearLayout>

</HorizontalScrollView>